02nd August 2013

- fix for issue #37 - de-queue test cases for cli.py
- fix for issue #42 - Testcase Filename contains '//' in CLI log
- fix for issue #56 - cli.py version number not correctly reported
- fix for issue #35 - log slider panel updated to show full messages
- added test button for email configuration
- added mechanism to backup the client log files
- added mechanism to stop execution of the test cases if the pre-execution
  script fails
- exported internal variables twister_user, twister_ce_ip and twister_ep_os
  they can be saved into DB
- updated UserGuide document
- applet changes for User Management prototype

18th July 2013

- issue #48 ; code changes to fix start_client for EP's where EP_HOST is commented out or there 
  is no host specified
- issue #47 ; corrected spelling issue
- issue #44 ; code changes to show the last test case when the list of tests in long and one 
   of them is set as setup test  

17th July 2013

- code changes to fix issues #45 and #46; new behaviour is: when a setup file fails, all setup files and normal
  files that follow in that suite are SKIPPED. Only the teardown files are run. Also, when a setup file does
  not pass, the suite is aborted. All statuses except PASS, in a setup file now are considered to fail.

16th July 2013

- updated start_client and epname.ini to introduce a new tag EP_HOST to allow
  the user the specify on what machine is allowed to start an EP. The user
  can specify hostname or IP address. If this tag is not set, the EP is allowed
  to be started by edfault
- added option to start the client in "silent" mode; no messages are printed
- updated GUI for some minor fixes:
             - labels resize
             - reconfigured warnings
             - changed uppercase project name
             - http server port removed
             - tc name field resized
- updated User Guide

INFO: the applet and client side were updated; so they have to be reinstalled			 

15th July 2013
